# lang-gle

./: .build-config.yml  .glottologid.txt  AUTHORS  CITATION.cff  IrishDocumentation.jspwiki  Links.md  Makefile.in  README  README.markdown  README.md  _config.yml  abbreviations-stems.md  adjectives-affixes.md  adjectives-stems.md  adpositions-stems-fst-src.md  adverbs-stems-fst-src.md  adverbs-stems.md  articles-stems.md  autogen.sh  configure.ac  conjunctions-stems-fst-src.md  conjunctions-stems.md  determiners-stems-fst-src.md  giella-gle.pc.in  gle.jspwiki  gle.md  index-header.md  index.md  interjections-stems-fst-src.md  lemmacount.json  manifest.toml  manifest.toml.in  nouns-affixes.md  nouns-stems.md  numerals-stems-fst-src.md  numerals-stems.md  particles-stems-fst-src.md  particles-stems.md  phonology-fst-src.md  phonology-morphology.md  (+106 more)
.gut/: delta.toml  manifest.toml
devtools/: tag_test.sh  test_ospell-office_suggestions.sh  test_voikkospell_suggestions.sh
doc/: IrishDocumentation.jspwiki  WhatIsThis.jspwiki  gle.jspwiki  index.xml  preamble.jspwiki  root-morphology.jspwiki  tabs.xml
docs/: IrishDocumentation.jspwiki  Links.jspwiki  _config.yml  index-header.md  language-map.md  link-header.jspwiki  root-morphology.jspwiki  site.xml
docs/badgedata/: speller-version.json
docs/typosreport/: report.json
gramcheck/: index.md
m4/: giella-config-files.m4
misc/: 00Readme.txt  IDEAS  Makefile  TODO  entry.j2  export_po_wordnet.py  export_po_wordnet_mono.py  iat_tsv.yaml  merge.sql  render_tsv.py  requirements.txt  xml_to_tsv.py
src/: Makefile.am  Makefile.am.rej  fixes-good.regex  fixes.regex
src/cg3/: disambiguator.cg3
src/fst/: Makefile.am  Makefile.am.orig  fixes.regex  phonology.init.xfscript  phonology.tidy.xfscript  phonology.twolc  phonology.verb.xfscript  root-adj.lexc  root-noun-all.lexc  root-others.lexc  root-verb-all.lexc
src/fst/affixes/: verbs.lexc
src/fst/morphology/: Makefile.am  Makefile.modifications-phon.am  phonology.init.xfscript  phonology.nounadj.xfscript  phonology.tidy.xfscript  phonology.twolc  phonology.verb.xfscript  phonology.xfscript-from-apertium  root-adj.lexc  root-noun-all.lexc  root-others.lexc  root-verb-all.lexc  root.lexc
src/fst/morphology/affixes/: adjectives.lexc  nouns.lexc  prefixes.lexc  propernouns.lexc  symbols.lexc  verbs.lexc
src/fst/morphology/incoming/: bardic-lex.txt  english-lex.txt
src/fst/morphology/stems/: abbreviations.lexc  adjectives.lexc  adpositions.lexc  adverbs.lexc  articles.lexc  bardic.lexc  conjunctions.lexc  determiners.lexc  english.lexc  interjections.lexc  latin.lexc  nouns.lexc  numerals.lexc  particles.lexc  pronouns.lexc  propernouns.lexc  punctuations.lexc  tags.lexc  tobar.lexc  verbalnouns.lexc  verbs.lexc
src/fst/morphology/test/: config.json.in  generate-adjective-lemmas.sh.in  generate-noun-lemmas.sh.in  generate-propernoun-lemmas.sh.in  generate-verb-lemmas.sh.in
src/fst/orthography/: Makefile.am  urucaps.xfscript
src/fst/stems/: adpositions.lexc  conjunctions.lexc  interjections.lexc  numerals.lexc  prefixes.lexc  pronouns.lexc  tobar.lexc  verbs.lexc
src/fst/syllabification/: hyphenation.xfscript
src/fst/transcriptions/: transcriptor-abbrevs2text.lexc  transcriptor-symbols2text.lexc
src/morphology/: Makefile.am  Makefile.modifications-phon.am  phonology.nounadj.xfscript  root-adj.lexc  root-noun-all.lexc  root-others.lexc  root-verb-all.lexc  root.lexc
src/morphology/affixes/: adjectives.lexc  nouns.lexc  verbs.lexc
src/morphology/stems/: VNVA-NEW.lexc  abbreviations.lexc  articles.lexc  determiners.lexc  nouns.lexc  numerals.lexc  particles.lexc  propernouns.lexc  punctuations.lexc  tags.lexc  verbalnouns.lexc  verbs.lexc
src/orthography/: Makefile.am  allcaps.xfscript  inituppercase.xfscript  urucaps.xfscript
src/phonology/: Makefile.am  gle-phon.initialmutation.xfscript  gle-phon.nounadj.xfscript  gle-phon.nouns.xfscript  gle-phon.twolc  gle-phon.verbs.xfscript  gle-phon.xfscript-from-apertium  gle-tidy.xfscript
tools/analysers/: pipeline.ts
tools/grammarcheckers/: Makefile.am  analyser-gt-whitespace.regex  check-explanation-tags.sh  errors-en.ftl  errors-ga.ftl  errors.json  errors.source.xml  grammarchecker.cg3  grc-disambiguator.cg3  index.xml  pipeline.json  pipeline.ts  pipespec.xml  pipespec.xml.in  spellchecker.cg3
tools/grammarcheckers/tests/: Makefile.am  candidates-iath-lex-conj-plus-copula.yaml  candidates-iath-lex-dairire.yaml  candidates-iath-lex-de-ainneoin.yaml  candidates-iath-msyn-adj-gender.yaml  candidates-iath-msyn-ecl-after-da.yaml  candidates-iath-msyn-ecl-after-go.yaml  candidates-iath-msyn-ecl-after-mura.yaml  candidates-iath-msyn-ecl-after-nach.yaml  candidates-iath-msyn-ecl-after-prep.yaml  candidates-iath-msyn-ecl-after-prep2.yaml  candidates-iath-msyn-gen-noun-adj.yaml  candidates-iath-msyn-gen-noun-defart-noun.yaml  candidates-iath-msyn-gen-noun-detpss-noun.yaml  candidates-iath-msyn-gen-noun-noun.yaml  candidates-iath-msyn-gen-vn-noun-with-article.yaml  candidates-iath-msyn-gen-vn-noun.yaml  candidates-iath-msyn-hPref-after-prep.yaml  candidates-iath-msyn-len-after-da.yaml  candidates-iath-msyn-len-after-ma.yaml  candidates-iath-msyn-len-after-prep.yaml  candidates-iath-msyn-lenition-after-ni.yaml  candidates-iath-msyn-lenition-after-nior.yaml  candidates-iath-msyn-lenition-after-possessive-adjective.yaml  candidates-iath-msyn-lenition-after-um.yaml  candidates-iath-msyn-noun-defart.yaml  candidates-iath-msyn-prep-detposs.yaml  candidates-iath-msyn-prep-pron.yaml  candidates-iath-msyn-tri-plus-defart.yaml  candidates-iath-syn-a-before-verb-relativephrase.yaml  candidates-iath-typo.yaml  candidates-iath-use-guillemets.yaml  candidates-law-lex-ar-an-aonach.yaml  candidates-law-lex-ar-an-tae.yaml  candidates-law-lex-conj-plus-copula.yaml  candidates-law-lex-dairire.yaml  candidates-law-msyn-ce-plus-defart.yaml  candidates-law-msyn-cúpla-plnoun-sgnoun.yaml  candidates-law-msyn-ecl-after-da.yaml  candidates-law-msyn-ecl-after-go.yaml  (+94 more)
tools/shellscripts/: Makefile.am
typosreport/: report.json
(+20 files in other folders)
